--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,11 @@
 </head>
 <body>
     
-
+    <div class="wrapper">
+        <div class="container">
+            
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
