--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,14 @@
     
     <div class="wrapper">
         <div class="container">
-            
+            <div class="left">
+                <h1>03</h1>
+                <h4>Saturday</h4>
+            </div>
+            <div class="right">
+                <h2>March</h2>
+                <h4>2024</h4>
+            </div>
         </div>
     </div>
 
