--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div class="container">
             <div class="left">
-                <h1>03</h1>
+                <h1 class="date">03</h1>
                 <h4>Saturday</h4>
             </div>
             <div class="right">
