--- a/index.htm
+++ b/index.htm
@@ -12,11 +12,11 @@
         <div class="container">
             <div class="left">
                 <h1 class="date">03</h1>
-                <h4>Saturday</h4>
+                <h4 class="day">Saturday</h4>
             </div>
             <div class="right">
-                <h2>March</h2>
-                <h4>2024</h4>
+                <h2 class="Month">March</h2>
+                <h4 class="year">2024</h4>
             </div>
         </div>
     </div>
