--- a/index.htm
+++ b/index.htm
@@ -11,12 +11,12 @@
     <div class="wrapper">
         <div class="container">
             <div class="left">
-                <h1 class="date">03</h1>
-                <h4 class="day">Saturday</h4>
+                <h1 class="date"></h1>
+                <h4 class="day"></h4>
             </div>
             <div class="right">
-                <h2 class="Month">March</h2>
-                <h4 class="year">2024</h4>
+                <h2 class="Month"></h2>
+                <h4 class="year"></h4>
             </div>
         </div>
     </div>
